# Orquestra

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: architecture.md  audit.md  connectors.md  costing.md  policies.md
infra/: docker-compose.yml
infra/migrations/: env.py
infra/migrations/versions/: 0001_initial.py
pkg/audit/: __init__.py  __main__.py  log.py
pkg/connectors/: __init__.py  base.py  copilot.py  salesforce.py  servicenow.py  snowflake.py
pkg/policy/: __init__.py  evaluator.py  loader.py  tagging.py
policies/: schema.json
policies/examples/: gdpr.json  hipaa.json
services/mock-integrations/: Dockerfile  app.py  seed.py
services/orchestrator/: Dockerfile  app.py  audit_writer.py  cost_engine.py  models.py  otel.py  policy_engine.py  secrets.py  workflow_runner.py
services/worker/: Dockerfile  discovery_refresher.py  incident_poller.py  orchestration_executor.py  worker.py
tests/integration/: test_e2e.py
tests/unit/: test_audit.py  test_connectors.py  test_cost.py  test_policy.py  test_workflow.py
ui/dashboard/: Dockerfile  next.config.js  package.json  server.js
ui/dashboard/pages/: agents.tsx  approvals.tsx  index.tsx  policies.tsx  traces.tsx
ui/dashboard/pages/audit/: [runId].tsx
